--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://timely-hub-backend-paschal-vercel.vercel.app/api
+VITE_API_BASE_URL=https://timely-hub-backend.vercel.app/
